kubernetes/nextcloud/components/openshift/route.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app.kubernetes.io/instance: nextcloud
  annotations:
    externaldns.k8s.io: pihole
    route.openshift.io/termination: reencrypt
    route.openshift.io/destination-ca-certificate-secret: ca-bundle
spec:
  ingressClassName: openshift-default
  rules:
    - host: nextcloud.arthurvardevanyan.com
      http:
        paths:
          - path: ""
            pathType: ImplementationSpecific
            backend:
              service:
                name: nextcloud
                port:
                  name: https
  tls:
    - hosts:
        - nextcloud.arthurvardevanyan.com
      secretName: nextcloud-cert
