kubernetes/nextcloud/components/openshift/egress-firewall.yaml
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: nextcloud
spec:
  egress:
    # Control Plane
    - type: Allow
      to:
        nodeSelector:
          matchLabels:
            node-role.kubernetes.io/control-plane: ""
    - type: Allow
      to:
        dnsName: truenas.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: minio.microshift.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: s3.unas.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: router-apps.app.okd.homelab.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: nextcloud.arthurvardevanyan.com
    - type: Allow
      to:
        cidrSelector: 10.101.10.5/32
    - type: Allow
      to:
        dnsName: nextcloud.com
    - type: Allow
      to:
        dnsName: download.nextcloud.com
    - type: Allow
      to:
        dnsName: apps.nextcloud.com
    - type: Allow
      to:
        dnsName: push-notifications.nextcloud.com
    - type: Allow
      to:
        dnsName: s16.nextcloud.com
    - type: Allow
      to:
        dnsName: x15.x10hosting.com
    # GitHub Apis
    # https://api.github.com/meta
    - type: Allow
      to:
        dnsName: raw.githubusercontent.com
    - type: Allow
      to:
        cidrSelector: 185.199.108.0/22
    - type: Allow
      to:
        cidrSelector: 185.199.111.0/22
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
